# HandsOnAITradingBook

./: main.py  pyproject.toml
04 Step 2 - Dataset Preparation/: 01 ExploratoryDataAnalysis.py  01_ExploratoryDataAnalysis.ipynb  02 IdentifyingMissingData.py  04 UsingZScoreToIdentifyOutliers.py  06 RemovingOutliers.py  07 TransformingOutliers.py  10 Normalization.py  12 TransformingTimeSeriesFeaturesToStationary.py  15 HurstCoefficient.py  16 CorrelationAnalysis.py  18 AutoIdentificationOfFeatures.py  19 PCA.py  20 DataSplit.py
04_Step-2-Dataset_Preparation/: 03_UsingBoxPlotToIdentifyOutliers.py  05_UsingIQRToIdentifyOutliers.py  08_CappingFlooringOutliers.py  09_FeatureEngineering.py  11_Standardization.py  12_TransformingTimeSeriesFeaturesToStationary.ipynb  13_ADFTest.ipynb  13_ADFTest.py  14_Engle-GrangerTest.py  17_FeatureImportanceAnalysis.py  21_KFoldCrossValidation.py  sweetviz_gender_comparison.html  sweetviz_report.html
05 Step 3 - Model Choice, Training, and Application/: 01 LinearRegression.py  03 LassoRegression.py  07 SupportVectorMachinesRegressionWithWaveletForecasting.py  08 SVRGridSearch.py  11 HiddenMarkovModels.py  12 GaussianNaiveBayes.py  14 LGBRankerRanking.py  16 OpenAILanguageModel.py  18 FinBERTModel.py
05_Step-3_Model-Choice-Training-and-Application/: 02_PolynomialRegression.py  04_RidgeRegression.py  05_MarkovSwitchingDynamicRegression.py  06_DecisionTreeRegression.py  09_MulticlassRandomForestModel.py  10_LogisticRegression.py  13_ConvolutionalNeuralNetworks.py  15_OPTICSClustering.py  17_AmazonChronosModel.py
